    - Open subprocesses with universal_newlines=True when expecting to read
      text from them.
    - Cope with changes in dict method return types in Python 3.

  [ Martin Pitt ]
  * tests/runner.sh: Run with $PYTHON if specified, to make it easier to run
    with a different Python version.
  * Consistent str vs. bytes handling, to work with Python 3.
  * Convert tests to current apt API.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 07 May 2012 16:13:22 +0100

language-selector (0.81) quantal; urgency=low

  * data/pkg_depends: replace cmap-adobe- depends by poppler-data 
    (lp: #1009052)

 -- Sebastien Bacher <seb128@ubuntu.com>  Thu, 07 Jun 2012 12:45:28 +0200

language-selector (0.80) quantal; urgency=low

  * Add gcompris to pkg_depends (for gcompris-sound-* in Edubuntu)

 -- Stéphane Graber <stgraber@ubuntu.com>  Mon, 14 May 2012 17:14:12 -0400

language-selector (0.79) precise; urgency=low

  * Update of help document (LP: #983951).

 -- Gunnar Hjalmarsson <gunnarhj@ubuntu.com>  Wed, 18 Apr 2012 08:09:49 +0200

language-selector (0.78) precise; urgency=low

  * Updated translations from launchpad (lp: #980842)

 -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 13 Apr 2012 16:21:24 +0200

language-selector (0.77) precise; urgency=low

  * dbus_backend/ls-dbus-backend: Set LC_IDENTIFICATION as well, to comply
    with what Ubiquity does. (LP: #926207)
  * tests/test_language_support_pkgs.py: Fix
    test_by_package_and_locale_noinstalled() for current pkg_depends: gedit
    does not need aspell any more, use abiword as trigger package.
  * language_support_pkgs.py, _expand_pkg_pattern(): Special-case "zh-han[st]"
    values for the locale. These are not actual locales, but e. g. Ubiquity
    assumes this works. So let these mean "zh_CN" and "zh_TW" respectively.
    Add a test case to tests/test_language_support_pkgs.py. (LP: #963460)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 30 Mar 2012 12:42:15 +0200

language-selector (0.76) precise; urgency=low
